--- a/style.css
+++ b/style.css
@@ -11,25 +11,32 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
+  font-family: Barlow, sans-serif;
   background: linear-gradient(
     to bottom right,
     rgb(178, 206, 170),
     rgb(76, 81, 175)
   );
 }
-
-video {
+.error {
   width: 67%;
+  color: rgb(56, 42, 47);
+  font-size: 80%;
+  font-weight: 700;
+  margin-top: 10px;
+  text-align: center;
+}
+video {
+  width: 70%;
   height: auto;
   border: 2px solid rgb(82, 82, 82);
 
   border-radius: 15px;
-  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .button-container {
-  width: 65%;
+  width: 67%;
   border: 2px solid black;
   padding: 10px;
   border-radius: 7px;
@@ -45,7 +52,7 @@ video {
   outline: none;
   height: 75px;
   width: 120px;
-  font-family: Barlow, sans-serif;
+
   font-size: 25px;
 
   text-shadow: 0 2px 5px black;
@@ -60,7 +67,7 @@ video {
 }
 
 #btn-select {
-  color: rgb(182, 233, 105);
+  color: rgb(98, 175, 97);
 }
 #btn-start {
   color: rgb(0, 191, 255);
@@ -68,7 +75,7 @@ video {
 
 #btn-start:disabled,
 #btn-select:disabled {
-  color: #858585;
+  color: #6a6969;
 }
 .button:active {
   transform: translateY(1px);
